# jira-sprint-analytics

./: .flake8  .gitignore  LICENSE  Makefile  README.md  TEMPLATE.env  jira_scraper.py  pyproject.toml  visualization.py
.github/workflows/: python_linting.yml
app/: constants.py  models.py  utils.py
app/managers/: jira_managers.py  report_managers.py
configs/: TEMPLATE.yaml
